--- a/Gradle/gradle_for_android_remark.html
+++ b/Gradle/gradle_for_android_remark.html
@@ -39,7 +39,9 @@ class: center, middle
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
     <script>
-      var slideshow = remark.create();
+      var slideshow = remark.create({
+        source: 'gradle_for_android.md'
+      });
     </script>
   </body>
 </html>
