--- a/Gradle/gradle_for_android_remark.html
+++ b/Gradle/gradle_for_android_remark.html
@@ -17,11 +17,12 @@
     </style>
   </head>
   <body>
+
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
     <script>
       var slideshow = remark.create({
-        source: 'gradle_for_android.md'
+        sourceUrl: 'gradle_for_android.md'
       });
     </script>
   </body>
