--- a/Gradle/gradle_for_android_remark.html
+++ b/Gradle/gradle_for_android_remark.html
@@ -17,7 +17,8 @@
     </style>
   </head>
   <body>
-
+    <textarea id="source" >
+    </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
     <script>
