test external markdown

--- a/Gradle/gradle_for_android_remark.html
+++ b/Gradle/gradle_for_android_remark.html
@@ -18,12 +18,13 @@
   </head>
   <body>
     <textarea id="source" >
+      class: center, middle
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
     <script>
       var slideshow = remark.create({
-        sourceUrl: 'gradle_for_android.md'
+        sourceUrl: 'https://github.com/ragubyun/TIL/blob/master/Gradle/gradle_for_android.md'
       });
     </script>
   </body>
