--- a/Gradle/gradle_for_android_remark.html
+++ b/Gradle/gradle_for_android_remark.html
@@ -21,108 +21,19 @@
 
 class: center, middle
 
-# 궁금했지만 항상 그냥 지나쳤던 안드로이드에서의 Gradle, 얉게 한번 파보자. ~~사실 별로 궁금해하지 않고 그냥 사용 하는 경우가 대다수..~~
-
-## Gradle? 그래들? 그레이들?
-
-- 책에서서는 ‘그레이들’로 발음하는 경우가 많음
-- 어차피 한글로 구글링해도 gradle로 검색됨
-- 결론: 그래-들
-- 빌드 자동화 툴 (친구들: ant, maven, make)
-
-## 빌드란 무엇인가?
-
-> 내가 작성한 코드를 `apk(android package)`, `aar(android archive)`로 만드는 과정
+# Title
 
 ---
 
-## 안드로이드 기본 프로젝트 구조를 살펴보자
+# Agenda
 
-Project 로 보기
+1. Introduction
+2. Deep-dive
+3. ...
 
-![Project](./image/structure_project_small.png)
+---
 
-Android 로 보기
-
-![Android](./image/structure_android_small.png)
-
-## Gradle 관련 파일
-
-build.gradle (Project: MyAppliation): 크게 두 부분
-
-```gradle
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-    }
-}
-
-allprojects {
-    repositories {
-        jcenter()
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-```
-
-build.gradle (Module: app): 크게 네 부분
-
-```gradle
-apply plugin: 'com.android.application'
-
-android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
-    defaultConfig {
-        applicationId "com.example.ragu.myapplication"
-        minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-}
-
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-}
-```
-
-gradle.settings
-
-```gradle
-include ':app'
-```
-
-gradle.properties
-
-```gradle
-systemProp.http.proxyHost=70.10.15.10
-systemProp.http.proxyPort=8080
-systemProp.http.nonProxyHosts=70.*|localhost
-
-systemProp.https.proxyHost=70.10.15.10
-systemProp.https.proxyPort=8080
-systemProp.https.nonProxyHosts=70.*|localhost
-```
+# Introduction
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
