--- a/Gradle/index.html
+++ b/Gradle/index.html
@@ -21,25 +21,13 @@
 
 class: center, middle
 
-# Title
-
----
-
-# Agenda
-
-1. Introduction
-2. Deep-dive
-3. ...
-
----
-
-# Introduction
-
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
     <script>
-      var slideshow = remark.create();
+      var slideshow = remark.create({
+        sourceUrl: 'gradle_for_android.md'
+      });
     </script>
   </body>
 </html>
