add remark sample markdown

--- a/Gradle/index.html
+++ b/Gradle/index.html
@@ -21,13 +21,32 @@
 
 class: center, middle
 
+# title
+
+---
+
+## sub title
+
+code here
+
+```python
+def fun():
+    print"Hello remark”)
+```
+
+---
+
+## sub title
+
+- first
+- second
+- third
+
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
     <script>
-      var slideshow = remark.create({
-        sourceUrl: 'gradle_for_android.md'
-      });
+      var slideshow = remark.create();
     </script>
   </body>
 </html>
